after_cart.html  changed

--- a/Landing page/Index.html
+++ b/Landing page/Index.html
@@ -81,9 +81,9 @@
       <div class="secondSection">
         <ul>
           <li>
-            <button onclick="showCart()" class="cartBtn cursorPointer">
+            <a href = "../Cart/after_cart.html" onclick="showCart()" class="cartBtn cursorPointer">
               <img class="cartIcon" src="https://image.flaticon.com/icons/png/128/628/628556.png" alt="cart" />
-            </button>
+            </a>
             <span id="noOfCartItems"></span>
           </li>
           <li>
